--- a/styles/sass/pages/blog/_post-comment.scss
+++ b/styles/sass/pages/blog/_post-comment.scss
@@ -9,7 +9,7 @@
   }
 
   @media only screen and (max-width: $bp-lrg) {
-    margin-top: $space-xl;
+    margin-top: $space-sml;
   }
 
   & .name-email {
